# KMC-AM

./: .gitignore  LICENSE  README.md
Transient-Thermal-Base/: CMakeLists.txt  README.md  SingleElement.cpp  TransientThermal.cpp  TransientThermal.md  generate_pvd.py  generate_temp_input.py  results.py  solution.pvd
Transient-Thermal-Base/Solution/: solution-0.gpl  solution-0.vtu  solution-1.gpl  solution-1.vtu  solution-10.gpl  solution-10.vtu  solution-100.gpl  solution-100.vtu  solution-1000.gpl  solution-1000.vtu  solution-1001.gpl  solution-1001.vtu  solution-1002.gpl  solution-1002.vtu  solution-1003.gpl  solution-1003.vtu  solution-1004.gpl  solution-1004.vtu  solution-1005.gpl  solution-1005.vtu  solution-1006.gpl  solution-1006.vtu  solution-1007.gpl  solution-1007.vtu  solution-1008.gpl  solution-1008.vtu  solution-1009.gpl  solution-1009.vtu  solution-101.gpl  solution-101.vtu  solution-1010.gpl  solution-1010.vtu  solution-1011.gpl  solution-1011.vtu  solution-1012.gpl  solution-1012.vtu  solution-1013.gpl  solution-1013.vtu  solution-1014.gpl  solution-1014.vtu  (+11062 more)
image_previews/flow/: flow.tex
image_previews/preview/: preview.tex
